Standardised capitalisation of titles.

--- a/dbi/dbi-intro.tex
+++ b/dbi/dbi-intro.tex
@@ -1,9 +1,9 @@
 % % % % % % % % % % % % % % % % % % % % % % 
 % dbi-intro.tex - Ian Huston
-% $Id: dbi-intro.tex,v 1.56 2009/10/31 14:09:04 ith Exp $
+% $Id: dbi-intro.tex,v 1.57 2009/11/05 19:34:28 ith Exp $
 % % % % % % % % % % % % % % % % % % % % % % 
 % Redefine CVSRevision for this section
-\renewcommand{\CVSrevision}{\version$Id: dbi-intro.tex,v 1.56 2009/10/31 14:09:04 ith Exp $}
+\renewcommand{\CVSrevision}{\version$Id: dbi-intro.tex,v 1.57 2009/11/05 19:34:28 ith Exp $}
 % % % % % % % % % % % % % % % % % % % % % % % % % % % % % % % % 
 % =========================================================== %
 % % % % % % % % % % % % % % % % % % % % % % % % % % % % % % % % 
@@ -112,7 +112,7 @@ scenarios which permit observable tensor signals.
 % % % % % % % % % % % % % % % % % % % % % % % % % % % % % % % % 
 % =========================================================== %
 % % % % % % % % % % % % % % % % % % % % % % % % % % % % % % % % 
-\section{String theory and extra dimensions}
+\section{String Theory and Extra Dimensions}
 \label{sec:extradims}
 % % % % % % % % % % % % % % % % % % % % % % % % % % % % % % % % 
 % =========================================================== %
@@ -216,7 +216,7 @@ Linde:2005dd}.
 % % failure to detect non-Gaussianity would rule in and out large classes of
 % % models.
 
-\subsection{Extra dimensions}
+\subsection{Extra Dimensions}
 String theory predicts that the one time and three spatial dimensions that
 constitute the observable universe do not represent the complete space-time manifold.
 Instead,
@@ -325,7 +325,7 @@ theories are physically identical since T-duality is an exact symmetry
 of string theory for closed strings.
 
 % 
-\subsection{D-branes}
+\subsection{D-Branes}
 \label{sec:dbranes-dbiintro}
 % Despite using string theory we will not be dealing with strings themselves.
 The dynamics of extended objects known as branes are particularly important for
@@ -407,7 +407,7 @@ effect on the inflationary physics. Kachru \etal \cite{brane4} recognised that
 in fact stabilisation will be important and must be taken into account.
 
 % % % % % % % % % % % % % % % % % % % % % % % % % % % % % % % % % % % % % % % %
-\subsection{Warped throats}
+\subsection{Warped Throats}
 \label{sec:warpedthroats-dbiintro}
 % % % % % % % % % % % % % % % % % % % % % % % % % % % % % % % % % % % % % % % % 
 The moduli must
@@ -515,7 +515,7 @@ enable concrete constraints to be formulated.
 % % % % % % % % % % % % % % % % % % % % % % % % % % % % % % % % 
 % =========================================================== %
 % % % % % % % % % % % % % % % % % % % % % % % % % % % % % % % % 
-\section{DBI inflation} 
+\section{DBI Inflation} 
 % 
 \label{sec:dbiinflation}
 % % % % % % % % % % % % % % % % % % % % % % % % % % % % % % % % 
@@ -716,7 +716,7 @@ may then be combined to provide a relation for the warped brane tension:
 % % % % % % % % % % % % % % % % % % % % % % % % % % % % % % % % 
 % =========================================================== %
 % % % % % % % % % % % % % % % % % % % % % % % % % % % % % % % % 
-\section{The Lyth bound}
+\section{The Lyth Bound}
 \label{sec:lyth-dbiintro}
 % % % % % % % % % % % % % % % % % % % % % % % % % % % % % % % % 
 % =========================================================== %
