--- a/dbi/dbi.tex
+++ b/dbi/dbi.tex
@@ -1,9 +1,9 @@
 % % % % % % % % % % % % % % % % % % % % % 
 % dbi.tex - Ian Huston
-% $Id: dbi.tex,v 1.58 2009/10/31 14:09:13 ith Exp $
+% $Id: dbi.tex,v 1.59 2009/11/05 19:34:28 ith Exp $
 % % % % % % % % % % % % % % % % % % % % % 
 % Redefine CVSRevision for this section
-\renewcommand{\CVSrevision}{\version$Id: dbi.tex,v 1.58 2009/10/31 14:09:13 ith Exp $}
+\renewcommand{\CVSrevision}{\version$Id: dbi.tex,v 1.59 2009/11/05 19:34:28 ith Exp $}
 
 % % % % % % % % % % % % % % % % % % % % % % % % % % % % % % % % 
 % =========================================================== %
@@ -569,7 +569,7 @@ that the constraints on the tensor modes can be satisfied.
 % % % % % % % % % % % % % % % % % % % % % % % % % % % % % % % % 
 % =========================================================== %
 % % % % % % % % % % % % % % % % % % % % % % % % % % % % % % % % 
-\section{Relaxing the upper bounds}
+\section{Relaxing the Upper Bounds}
 % 
 \label{sec:relaxing-dbi}
 % % % % % % % % % % % % % % % % % % % % % % % % % % % % % % % % 
@@ -949,7 +949,7 @@ next chapter.
 % 
 % % % % % % % % % % % % % % % % % % % % % % % % % % % % % % % % 
 % =========================================================== %
-\section{Review of other DBI based models} 
+\section{Review of Other DBI Based Models} 
 
 \label{sec:others-dbi}
 % =========================================================== %
