--- a/dbi/multibrane.tex
+++ b/dbi/multibrane.tex
@@ -1,14 +1,14 @@
 % % % % % % % % % % % % % % % % % % % % % 
 % multibrane.tex - Ian Huston
-% $Id: multibrane.tex,v 1.56 2009/10/28 15:01:17 ith Exp $
+% $Id: multibrane.tex,v 1.57 2009/11/05 19:34:28 ith Exp $
 % % % % % % % % % % % % % % % % % % % % % 
 % Redefine CVSRevision for this section
-\renewcommand{\CVSrevision}{\version$Id: multibrane.tex,v 1.56 2009/10/28 15:01:17 ith Exp $}
+\renewcommand{\CVSrevision}{\version$Id: multibrane.tex,v 1.57 2009/11/05 19:34:28 ith Exp $}
 
 % % % % % % % % % % % % % % % % % % % % % % % % % % % % % % % % 
 % =========================================================== %
 % % % % % % % % % % % % % % % % % % % % % % % % % % % % % % % % 
-\chapter{Multi brane inflation}
+\chapter{Multi Coincident Brane Inflation}
 \label{ch:multibrane}
 % % % % % % % % % % % % % % % % % % % % % % % % % % % % % % % % 
 % =========================================================== %
@@ -520,7 +520,7 @@ large and finite $n$ limits.
 % % % % % % % % % % % % % % % % % % % % % % % % % % % % % % % % 
 % =========================================================== %
 % % % % % % % % % % % % % % % % % % % % % % % % % % % % % % % % 
-\section{Multi-brane inflation with a large number of branes}
+\section{Coincident Brane Inflation with a Large Number of Branes}
 \label{sec:twlargen-multi}
 % % % % % % % % % % % % % % % % % % % % % % % % % % % % % % % % 
 % =========================================================== %
@@ -762,7 +762,7 @@ incompatible with the generalized BM bound.
 % % % % % % % % % % % % % % % % % % % % % % % % % % % % % % % % 
 % =========================================================== %
 % % % % % % % % % % % % % % % % % % % % % % % % % % % % % % % % 
-\section{Multi-brane inflation with a finite number of branes}
+\section{Coincident Brane Inflation with a Finite Number of Branes}
 \label{sec:finiten-multi}
 % % % % % % % % % % % % % % % % % % % % % % % % % % % % % % % % 
 % =========================================================== %
@@ -771,7 +771,7 @@ incompatible with the generalized BM bound.
 % % % % % % % % % % % % % % % % % % % % % % % % % % % % % % % % 
 % =========================================================== %
 % % % % % % % % % % % % % % % % % % % % % % % % % % % % % % % % 
-\subsection{\texorpdfstring{The finite $n$ model}{The finite n model}}
+\subsection{\texorpdfstring{The Finite $n$ Model}{The Finite n Model}}
 \label{sec:finitensub-multi}
 % % % % % % % % % % % % % % % % % % % % % % % % % % % % % % % % 
 % =========================================================== %
@@ -938,7 +938,7 @@ difficult to constrain this model when $N\gg n$.
 % % % % % % % % % % % % % % % % % % % % % % % % % % % % % % % % 
 % =========================================================== %
 % % % % % % % % % % % % % % % % % % % % % % % % % % % % % % % % 
-\subsection{Bounds on the Tensor-Scalar Ratio for finite \texorpdfstring{$n$}{n}} 
+\subsection{Bounds on the Tensor-Scalar Ratio for Finite \texorpdfstring{$n$}{n}} 
 \label{sec:multibounds-multi}
 % % % % % % % % % % % % % % % % % % % % % % % % % % % % % % % % 
 % =========================================================== %
