--- a/mainintro.tex
+++ b/mainintro.tex
@@ -1,9 +1,9 @@
 % % % % % % % % % % % % % % % % % % % % % % % % % % % % 
 % mainintro.tex - Ian Huston
-% $Id: mainintro.tex,v 1.57 2009/10/29 12:36:56 ith Exp $
+% $Id: mainintro.tex,v 1.58 2009/11/05 19:34:28 ith Exp $
 % % % % % % % % % % % % % % % % % % % % % % % % % % % % 
 % Redefine CVSRevision for this section
-\renewcommand{\CVSrevision}{\version$Id: mainintro.tex,v 1.57 2009/10/29 12:36:56 ith Exp $}
+\renewcommand{\CVSrevision}{\version$Id: mainintro.tex,v 1.58 2009/11/05 19:34:28 ith Exp $}
 
 % % % % % % % % % % % % % % % % % % % % % % % % % % % % % % % % 
 % =========================================================== %
@@ -766,7 +766,7 @@ Substituting $u=a\dvp1$ gives the Mukhanov equation \cite{Mukhanov:1990me}
 % 
 where $z= a\vp_0'/\H$.
 
-\subsection{Quantum perturbations}
+\subsection{Quantum Perturbations}
 So far we have considered classical perturbations. The generation of
 fluctuations is a quantum effect, however, and we need to consider the
 perturbations as quantum operators in some vacuum. 
@@ -871,7 +871,7 @@ apply to non slow-roll models so long as they are applied well before horizon
 crossing.
 
 
-\subsection{Power spectra and spectral indices}
+\subsection{Power Spectra and Spectral Indices}
 The power spectrum of the inflaton perturbation $\dvp1 = u/a$ can now be
 defined as
 % 
@@ -1031,7 +1031,7 @@ future.
 % % % % % % % % % % % % % % % % % % % % % % % % % % % % % % % % 
 % =========================================================== %
 % % % % % % % % % % % % % % % % % % % % % % % % % % % % % % % % 
-\section{Current observations}
+\section{Current Observations}
 \label{sec:obs-intro}
 % % % % % % % % % % % % % % % % % % % % % % % % % % % % % % % % 
 % =========================================================== %
