--- a/numerical/numerical.tex
+++ b/numerical/numerical.tex
@@ -1,15 +1,15 @@
 % % % % % % % % % % % % % % % % % % % % % 
 % numerical.tex - Ian Huston
-% $Id: numerical.tex,v 1.40 2009/11/05 19:16:00 ith Exp $
+% $Id: numerical.tex,v 1.41 2009/11/05 19:34:28 ith Exp $
 % % % % % % % % % % % % % % % % % % % % % 
 % Redefine CVSRevision for this section
-\renewcommand{\CVSrevision}{\version$Id: numerical.tex,v 1.40 2009/11/05 19:16:00 ith Exp $}
+\renewcommand{\CVSrevision}{\version$Id: numerical.tex,v 1.41 2009/11/05 19:34:28 ith Exp $}
 % \input{numerical/paper3}
 
 % % % % % % % % % % % % % % % % % % % % % % % % % % % % % % % % 
 % =========================================================== %
 % % % % % % % % % % % % % % % % % % % % % % % % % % % % % % % %
-\chapter{Numerical system and implementation}
+\chapter{Numerical System and Implementation}
 \label{ch:numericalsystem}
 % % % % % % % % % % % % % % % % % % % % % % % % % % % % % % % % 
 % =========================================================== %
@@ -390,7 +390,7 @@ have been tested are outlined.
 % % % % % % % % % % % % % % % % % % % % % % % % % % % % % % % % 
 % =========================================================== %
 % % % % % % % % % % % % % % % % % % % % % % % % % % % % % % % %
-\subsection{Potentials and parameters}
+\subsection{Potentials and Parameters}
 \label{sec:pots-num}
 % % % % % % % % % % % % % % % % % % % % % % % % % % % % % % % % 
 % =========================================================== %
@@ -1114,8 +1114,8 @@ used in the third stage to calculate the source term \eq{eq:KG2-source-ntime} at
 time for each $k$. Finally, the second order perturbation equations are solved using
 the source term results.
 
-To test the source term calculation the numerical results were compared to an
-analytic solution in Section~\ref{sec:tests-num}. Numerical parameters such as
+To test the source term calculation the numerical results were compared to 
+analytic solutions in Section~\ref{sec:tests-num}. Numerical parameters such as
 $N_\theta$ and $N_k$ were set by minimising the relative error between the two
 approaches.
 
