--- a/numerical/perts.tex
+++ b/numerical/perts.tex
@@ -1,9 +1,9 @@
 % % % % % % % % % % % % % % % % % % % % % 
 % numerical-intro.tex - Ian Huston
-% $Id: perts.tex,v 1.24 2009/10/29 12:37:11 ith Exp $
+% $Id: perts.tex,v 1.25 2009/11/05 19:34:28 ith Exp $
 % % % % % % % % % % % % % % % % % % % % % 
 % Redefine CVSRevision for this section
-\renewcommand{\CVSrevision}{\version$Id: perts.tex,v 1.24 2009/10/29 12:37:11 ith Exp $}
+\renewcommand{\CVSrevision}{\version$Id: perts.tex,v 1.25 2009/11/05 19:34:28 ith Exp $}
 % % % % % % % % % % % % % % % % % % % % % % % % % % % % % % % % 
 % =========================================================== %
 % % % % % % % % % % % % % % % % % % % % % % % % % % % % % % % %
@@ -361,7 +361,7 @@ These are not reproduced here, but are presented for example in Section~II~B of
 \Rref{Malik:2006ir}. 
 
 % % % % % % % % % % % % % % % % 
-\subsection{Fourier transform}
+\subsection{Fourier Transform}
 \label{sec:fourier-perts}
 % % % % % % % % % % % % % % % % 
 % 
@@ -501,7 +501,7 @@ Q\dvp1(\qvi)
 
 
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
-\subsection{Slow Roll approximation}
+\subsection{Slow Roll Approximation}
 \label{sec:slowroll}
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 
@@ -586,7 +586,7 @@ order equation (\ref{eq:fokg}) and background equation
 % % % % % % % % % % % % % % % % % % % % % % % % % % % % % % % % 
 % =========================================================== %
 % % % % % % % % % % % % % % % % % % % % % % % % % % % % % % % %
-\section{Observable quantities}
+\section{Observable Quantities}
 \label{sec:observable-perts}
 % % % % % % % % % % % % % % % % % % % % % % % % % % % % % % % % 
 % =========================================================== %
