--- a/numerical/results.tex
+++ b/numerical/results.tex
@@ -1,9 +1,9 @@
 % % % % % % % % % % % % % % % % % % % % % 
 % results.tex - Ian Huston
-% $Id: results.tex,v 1.23 2009/10/29 17:26:00 ith Exp $
+% $Id: results.tex,v 1.24 2009/11/05 19:34:28 ith Exp $
 % % % % % % % % % % % % % % % % % % % % % 
 % Redefine CVSRevision for this section
-\renewcommand{\CVSrevision}{\version$Id: results.tex,v 1.23 2009/10/29 17:26:00 ith Exp $}
+\renewcommand{\CVSrevision}{\version$Id: results.tex,v 1.24 2009/11/05 19:34:28 ith Exp $}
 
 % % % % % % % % % % % % % % % % % % % % % % % % % % % % % % % % 
 % =========================================================== %
@@ -98,7 +98,7 @@ different potentials will be compared in Section~\ref{sec:compare-res}.
 % % % % % % % % % % % % % % % % % % % % % % % % % % % % % % % % 
 % =========================================================== %
 % % % % % % % % % % % % % % % % % % % % % % % % % % % % % % % %
-\subsection{Results for \texorpdfstring{$V(\vp)=\msqphisq$}{m-squared model}}
+\subsection{Results for \texorpdfstring{$V(\vp)=\msqphisq$}{m-squared Model}}
 \label{sec:msqphisq-res}
 % % % % % % % % % % % % % % % % % % % % % % % % % % % % % % % % 
 % =========================================================== %
@@ -313,7 +313,7 @@ exited the horizon. The $k$ range shown here is $K_1=\left[ 1.9\e{-5}, 0.039
 % % % % % % % % % % % % % % % % % % % % % % % % % % % % % % % % 
 % =========================================================== %
 % % % % % % % % % % % % % % % % % % % % % % % % % % % % % % % %
-\subsection{Comparison of models}
+\subsection{Comparison of Models}
 \label{sec:compare-res}
 % % % % % % % % % % % % % % % % % % % % % % % % % % % % % % % % 
 % =========================================================== %
@@ -450,7 +450,7 @@ plans to extend the calculation to deal with more interesting models will be out
 % % % % % % % % % % % % % % % % % % % % % % % % % % % % % % % % 
 % =========================================================== %
 % % % % % % % % % % % % % % % % % % % % % % % % % % % % % % % %
-\section{Next steps}
+\section{Next Steps}
 \label{sec:next-res}
 % % % % % % % % % % % % % % % % % % % % % % % % % % % % % % % % 
 % =========================================================== %
