--- a/mainintro.tex
+++ b/mainintro.tex
@@ -1,9 +1,9 @@
 % % % % % % % % % % % % % % % % % % % % % % % % % % % % 
 % mainintro.tex - Ian Huston
-% $Id: mainintro.tex,v 1.58 2009/11/05 19:34:28 ith Exp $
+% $Id: mainintro.tex,v 1.59 2009/11/05 19:58:59 ith Exp $
 % % % % % % % % % % % % % % % % % % % % % % % % % % % % 
 % Redefine CVSRevision for this section
-\renewcommand{\CVSrevision}{\version$Id: mainintro.tex,v 1.58 2009/11/05 19:34:28 ith Exp $}
+\renewcommand{\CVSrevision}{\version$Id: mainintro.tex,v 1.59 2009/11/05 19:58:59 ith Exp $}
 
 % % % % % % % % % % % % % % % % % % % % % % % % % % % % % % % % 
 % =========================================================== %
@@ -616,10 +616,16 @@ the metric can be written with perturbations, up to first order, as follows:
 \begin{align}
  \label{eq:pertmetric-intro}
  g_{00} &= -a^2 (1 + 2\phi_1) \,, \nonumber\\
- g_{0i} &= a^2 (B_{1,i} - S_{1i}) \,, \nonumber\\
- g_{ij} &= a^2\left[ (1 - 2\psi_1)\delta_{ij} + 2E_{1,ij} + 2F_{1(i,j)} +
-h_{1ij}
-\right] \,.
+ g_{0i} &= a^2 B_{1i} \,, \nonumber\\
+ g_{ij} &= a^2\left(\delta_{ij} + 2C_{ij} \right) \,.
+\end{align}
+% 
+The $0$-$i$ and $i$-$j$ perturbations can be decomposed into scalar, vector and
+tensor parts \cite{Malik:2008im}:
+\begin{align}
+\label{eq:svt-intro}
+  B_{1i} &= B_{1,i} - S_{1i} \,, \nonumber\\
+  C_{1ij} &= -\psi_1\delta_{ij} + E_{1,ij} + F_{1(i,j)} + \frac{1}{2}h_{1ij}\,.
 \end{align}
 % 
 The vectors $S_{1i}$ and $F_{1i}$ are divergence free and the tensor part
