--- a/ihmacros.sty
+++ b/ihmacros.sty
@@ -1,6 +1,6 @@
 % % % % % % % % % % % % % % % % % 
 % ihmacros.sty - Ian Huston
-% $Id: ihmacros.sty,v 1.24 2009/10/29 12:36:56 ith Exp $
+% $Id: ihmacros.sty,v 1.25 2009/11/05 22:21:17 ith Exp $
 % % % % % % % % % % % % % % % % % 
 \NeedsTeXFormat{LaTeX2e}
 \ProvidesPackage{ihmacros}
@@ -29,6 +29,8 @@
 \newcommand{\E}{\ensuremath{\mathcal{E}}}
 \newcommand{\F}{\ensuremath{\mathcal{F}}}
 \newcommand{\G}{\ensuremath{\mathcal{G}}}
+\newcommand{\X}{\ensuremath{\mathcal{X}}}
+
 % 
 \renewcommand{\d}{\mathrm{d}}
 \newcommand{\N}{\ensuremath{\mathcal{N}}}
