Fixed review section.

--- a/dbi/dbi.tex
+++ b/dbi/dbi.tex
@@ -1,9 +1,9 @@
 % % % % % % % % % % % % % % % % % % % % % 
 % dbi.tex - Ian Huston
-% $Id: dbi.tex,v 1.59 2009/11/05 19:34:28 ith Exp $
+% $Id: dbi.tex,v 1.60 2009/11/06 12:36:39 ith Exp $
 % % % % % % % % % % % % % % % % % % % % % 
 % Redefine CVSRevision for this section
-\renewcommand{\CVSrevision}{\version$Id: dbi.tex,v 1.59 2009/11/05 19:34:28 ith Exp $}
+\renewcommand{\CVSrevision}{\version$Id: dbi.tex,v 1.60 2009/11/06 12:36:39 ith Exp $}
 
 % % % % % % % % % % % % % % % % % % % % % % % % % % % % % % % % 
 % =========================================================== %
@@ -956,8 +956,7 @@ next chapter.
 % % % % % % % % % % % % % % % % % % % % % % % % % % % % % % % % 
 \begin{figure}[htb]
  \centering
- \includegraphics[keepaspectratio=true,
-width=\textwidth]{./dbi/graphs/dbi-review.pdf}
+ \includegraphics[width=0.8\textwidth]{./dbi/graphs/dbi-review.pdf}
  % dbi-review.pdf: 498x327 pixel, 72dpi, 17.57x11.54 cm, bb=0 0 498 327
  \caption{A schematic of recent DBI inspired models}
  \label{fig:review-dbi}
@@ -966,15 +965,17 @@ width=\textwidth]{./dbi/graphs/dbi-review.pdf}
 
 We have found that the standard DBI model appears to be in conflict with
 observations. Many attempts have since been made to modify the original scenario in
-order to evade these bounds. These can be classified according to
+order to evade the bounds derived above. These new models can be classified according
+to
 whether they involve single or multiple fields and single or multiple branes.
-Figure~\ref{fig:review-dbi} shows a list of some models in
+Figure~\ref{fig:review-dbi} lists some of the models in
 each category.
 
 
-The most straightforward extensions of the DBI model have the same single degree of
-freedom, but
-rely on other physical mechanisms to ease the bounds on $r$.
+The most straightforward extensions of the DBI model are single field, single brane
+models. 
+These have a single degree of freedom, as the D3-brane model does, but
+they rely on other physical mechanisms to ease the bounds on $r$.
 A natural extension to the single ${\rm D3}$-brane model 
 is to consider a ${\rm D}p$-brane wrapped around a $(p-3)$-cycle of the 
 internal space.
@@ -991,7 +992,7 @@ However, in arriving at this bound, it was assumed that
 backreaction effects of any fluxes in the throat were 
 negligible. 
 Kobayashi \etal \cite{Kobayashi:2007hm} 
-considered both ${\rm D5}$- and
+considered both ${\rm D5}$ and
 ${\rm D7}$ wrapped brane models, but concluded that the former case
 required an excessively large background charge in 
 order to relax the bounds on $r$. 
@@ -1000,8 +1001,8 @@ This requirement is highly constraining, but is
 still not as restrictive as the charge required by the single brane scenario,
 which effectively rules that out as a predictive model. 
 % 
-Thus, wrapped brane configurations are preferable to
-single brane models but the parameter space of the former is still severely
+Thus, a wrapped brane configuration is preferable to
+the single D3-brane model but the parameter space of the former is still severely
 limited by the WMAP5 observations \cite{Alabidi:2008ej}. 
 % However
 % the difficulty in these models is that the backreaction is no longer under
@@ -1030,17 +1031,18 @@ standard DBI model is not replicated.
  
 
 
-Changing the physical setting can also allow larger field ranges, for example by
-considering D4-branes in compactified manifolds containing monodromies. 
-The large field
-variations in this single brane, single field model lead to possibly observable
+Changing the physical setting can also allow larger field ranges which can relax the
+bounds on $r$. One example is the case of D4-branes in compactified manifolds
+containing monodromies. 
+The large field variations in this single brane, single field model lead to possibly
+observable
 tensor modes
 \cite{Silverstein:2008sg}. Although formulated in Type IIA string theory, the
 monodromy model has a simple inflationary interpretation as a large field, slow roll
 model with the potential $V(\vp)=\vp^{2/3}$. 
 
 The tensor-scalar ratio and other observable quantities are
-significantly altered if the throat geometry changes for the
+significantly altered if the throat geometry changes, even in the case of the
 standard D3-brane model \cite{Gmeiner:2007uw}. In
 \Rref{Butti:2004pk} a one parameter family of solutions is given, which interpolates
 between the
@@ -1089,11 +1091,14 @@ of the tensor-scalar ratio will, therefore, be reduced.
 We have not yet addressed models with multiple branes but only one effective
 degree of freedom in total. Multiple M5-branes in M-theory act with an effective
 single degree of freedom but the Lyth bound is now significantly weakened and large
-field ranges are possible \cite{Krause:2007jr}. 
-Another proposal is that of $n$ coincident D3-branes in a warped throat
-\cite{thomasward, hltw,
-Ward:2007gs}. In Chapter~\ref{ch:multibrane} we investigate this model in both
-the large and small $n$ limits and show how the constraints derived in this
+field ranges and an observable tensor signal are possible \cite{Krause:2007jr}. 
+Another proposal is that of $n$ D3-branes which are coincident propagating in a
+warped throat \cite{thomasward, hltw, Ward:2007gs, Berndsen:2009ww}. The
+non-Abelian nature of the interactions between the branes differentiates this model
+from other multi brane models and the model is also known as ``Matrix Inflation''.
+In Chapter~\ref{ch:multibrane} we
+investigate this model in the relativistic limit
+for both large and small $n$, and show how the constraints derived in this
 chapter can be applied.
 
 
