--- a/numerical/perts.tex
+++ b/numerical/perts.tex
@@ -1,9 +1,9 @@
 % % % % % % % % % % % % % % % % % % % % % 
 % numerical-intro.tex - Ian Huston
-% $Id: perts.tex,v 1.26 2009/11/05 22:21:50 ith Exp $
+% $Id: perts.tex,v 1.27 2009/11/07 13:21:34 ith Exp $
 % % % % % % % % % % % % % % % % % % % % % 
 % Redefine CVSRevision for this section
-\renewcommand{\CVSrevision}{\version$Id: perts.tex,v 1.26 2009/11/05 22:21:50 ith Exp $}
+\renewcommand{\CVSrevision}{\version$Id: perts.tex,v 1.27 2009/11/07 13:21:34 ith Exp $}
 % % % % % % % % % % % % % % % % % % % % % % % % % % % % % % % % 
 % =========================================================== %
 % % % % % % % % % % % % % % % % % % % % % % % % % % % % % % % %
@@ -688,9 +688,10 @@ Fourier space using \eq{eq:Rfulldefn-perts} implies that
 \R_1(\kvi-\qvi) \\ \nonumber
 % 
   &\quad- \left\langle \frac{1}{(2\pi)^3} \int \d q^3\, \R_1(\qvi)
-\R_1(\kvi-\qvi) \right\rangle \Bigg) \,.
+\R_1(\kvi-\qvi) \right\rangle \Bigg) \,,
 \end{align}
 % 
+where $\langle \rangle$ denotes the expectation value.
 A good approximation of the local non-gaussianity produced is then given by
 % 
 \begin{align}
