--- a/numerical/results.tex
+++ b/numerical/results.tex
@@ -1,9 +1,9 @@
 % % % % % % % % % % % % % % % % % % % % % 
 % results.tex - Ian Huston
-% $Id: results.tex,v 1.24 2009/11/05 19:34:28 ith Exp $
+% $Id: results.tex,v 1.25 2009/11/07 13:22:31 ith Exp $
 % % % % % % % % % % % % % % % % % % % % % 
 % Redefine CVSRevision for this section
-\renewcommand{\CVSrevision}{\version$Id: results.tex,v 1.24 2009/11/05 19:34:28 ith Exp $}
+\renewcommand{\CVSrevision}{\version$Id: results.tex,v 1.25 2009/11/07 13:22:31 ith Exp $}
 
 % % % % % % % % % % % % % % % % % % % % % % % % % % % % % % % % 
 % =========================================================== %
@@ -46,7 +46,7 @@ differences apparent between the potentials which will be outlined in
 Section~\ref{sec:compare-res}.
 
 We have listed the parameters $m$, $\lambda$, $\sigma$ and $m_0$ of the potentials
-in Section~\ref{sec:pots-num}. These were found using the WMAP5 normalisation
+in Table~\ref{tab:params-num}. These were found using the WMAP5 normalisation
 at $\kwmap=0.002 \Mpc^{-1} = 5.25 \e{-60}\Mpl$ \cite{Komatsu:2008hk}.
 We have also outlined in \eq{eq:Krangedefns} the three $k$ ranges that have been
 used:
@@ -71,8 +71,9 @@ on size). This is expected and in the scale invariant case a log divergence can
 be shown to exist \cite{Lyth:2007jh}. We have implemented an arbitrary sharp
 cutoff at $\kmin$ below which 
 $\dvp1$ is taken to be zero. 
-As mentioned in Chapter~\ref{ch:numericalsystem} there is some evidence to suggest
-that a similar cutoff is supported by the WMAP data \cite{Sinha:2005mn,Kim:2009pf}. 
+As mentioned in Chapter~\ref{ch:numericalsystem}, there is some evidence to suggest
+that a similar cutoff might be supported by the WMAP data
+\cite{Sinha:2005mn,Kim:2009pf}. 
 
 In Section~\ref{sec:results} the numerical results for the computation described in
 Chapter~\ref{ch:numericalsystem} will be given. Comparisons of the results from the
@@ -91,7 +92,7 @@ Section~\ref{sec:disc-num} there will be a discussion of outcomes of the chapter
 % =========================================================== %
 % % % % % % % % % % % % % % % % % % % % % % % % % % % % % % % %
 In Section~\ref{sec:msqphisq-res} general results will be given demonstrating the
-effective operation of the numerical system. These results all use the
+ operation of the numerical system. These results all use the
 $V(\vp)=\msqphisq$ potential for the purposes of comparison. The results for the four
 different potentials will be compared in Section~\ref{sec:compare-res}.
 
@@ -191,7 +192,8 @@ a minimum.
 \centering
  \includegraphics[width=0.8\textwidth]{numerical/graphs/src-kwmap-3ranges-large}
 \caption[Comparison of source term for different ranges]{Comparison of the source
-term for $\kwmap$ over three different ranges with different $\Delta k$s as specified
+term \eqref{eq:KG2-source-ntime} for $\kwmap$ over three different ranges with
+different $\Delta k$s as specified
 in
 \eq{eq:Krangedefns}.} 
 \label{fig:src-kwmap-3ranges}
@@ -200,7 +202,8 @@ in
 \begin{figure}
 \centering
  \includegraphics[width=0.8\textwidth]{numerical/graphs/src-3ks-large}
-\caption[Source term at three different $k$s]{The source term for three different $k$
+\caption[Source term at three different $k$s]{The source term
+\eqref{eq:KG2-source-ntime} for three different $k$
 values including the WMAP
 pivot scale. As $k$
 gets larger (scale gets smaller) the source term becomes smaller.}
@@ -215,7 +218,7 @@ The source term is large at early times, and closely follows the form
 of the spectrum of the first order perturbations as can be seen from
 Figure~\ref{fig:Pphi-kwmap}.
 %
-It is useful to compare the magnitude of the source term with the
+It is informative to compare the magnitude of the source term with the
 other terms in the second order evolution equation
 (\ref{eq:KG2-fourier-sr-ntime}). If we let $T$ denote the other terms,
 %
@@ -240,9 +243,10 @@ important.
 \begin{figure}
 \centering
  \includegraphics[width=0.8\textwidth]{numerical/graphs/src-vs-t-kwmap-large}
-\caption[Source term compared to $T$ term]{The source term (lower blue line) is
+\caption[Source term compared to $T$ term]{The source term (lower blue line), as
+defined in \eq{eq:KG2-source-ntime}, is
 compared with the $T$ term
-(upper green line) as defined in the text for $\kwmap$. The source term is of
+(upper green line), as defined in \eq{eq:Tdefn}, for $\kwmap$. The source term is of
 comparable magnitude at the beginning of the simulation.}
  \label{fig:src-vs-others}
 \end{figure}
@@ -251,7 +255,8 @@ comparable magnitude at the beginning of the simulation.}
 \begin{figure}
 \centering
  \includegraphics[width=0.8\textwidth]{numerical/graphs/s-over-t-3ks-large}
-\caption[Quotient of $S$ and $T$]{The quotient of $S$ and $T$ terms for three
+\caption[Quotient of $S$ and $T$]{The quotient of the $S$ term,
+\eq{eq:KG2-source-ntime}, and the $T$ term, \eq{eq:Tdefn}, for three
 different $k$ values
 including the WMAP pivot scale. Depending on $k$ the source term only dominates
 at early stages or is important throughout the evolution.}
@@ -333,8 +338,10 @@ model has a blue spectrum ($n_s>1$).}
 \end{figure}
 % 
 Figure~\ref{fig:cmp-Pr} shows the power spectrum of curvature perturbations, $\Pr$, for each
-potential. The $V(\vp)=\msqphisq$, $\lambdaphifour$ and $\phitwooverthree$ models all clearly have
-a red spectrum with $n_s <1$. On the other hand the $V(\vp)=\msqphisqwithV$ model has a blue
+potential. The $\msqphisq$, $\lambdaphifour$ and $\phitwooverthree$ models all
+clearly have
+a red spectrum with $n_s <1$. On the other hand the $\msqphisqwithV$ model has
+a blue
 spectrum ($n_s>1$) when $U_0$ to chosen to be $5\e{-10}\Mpl^4$ as specified in
 Section~\ref{sec:pots-num}. 
 % 
@@ -508,7 +515,8 @@ S_\mathrm{full}(\kvi) = \frac{1}{(2\pi)^2}\int \d q q^2 &\Bigg\{
 &+ F_\mathrm{full}(\dvp1(\kvi), \dN{\dvp1}(\kvi))\,.
 \end{align}
 % 
-The $F$ term for the full equation requires the use of three further $\theta$
+The $F_\mathrm{full}$ term in \eq{eq:fullsrc-res} requires the use of three further
+$\theta$
 integrals in addition to those in \eq{eq:AtoD-num}:
 % 
 \begin{align}
@@ -523,10 +531,12 @@ integrals in addition to those in \eq{eq:AtoD-num}:
 \dN{\dvp1}(\kvi-\qvi)\d \theta \,.
 \end{align}
 % 
-The term $\sin^3(\theta)/|\kvi-\qvi|^2$ goes to $0$ in the limit when $k=q$ and
+It is worth noting that the term $\sin^3(\theta)/|\kvi-\qvi|^2$ goes to $0$ in the
+limit when $k=q$ and
 $\theta\rightarrow 0$.
 % 
-Using the terms $\E$, $\F$ and $\wt{\G}$ the full $F$ term can now be written:
+Using the terms $\E$, $\F$ and $\wt{\G}$, the $F_\mathrm{full}$ term can now be
+written:
 \begin{align}
  \label{eq:fullfterm-res}
 F_\mathrm{full} &= \frac{8\pi G}{(2\pi)^2}\frac{1}{(aH)^2} \int \d q\, q^2 \Bigg\{
@@ -569,9 +579,10 @@ G}{4}(\dN{\vp_0})^2 \right)q^2 + \frac{3}{4}\frac{8\pi G}{(aH)^2} X^2 \right)
 \end{align}
 % 
 This set of equations is clearly much longer than the slow roll ones used in
-Chapter~\ref{ch:numericalsystem}. The numerical complexity is not however much
-greater, once the three terms in \eq{eq:efg-terms-res} are calculated. The running
-time of the full calculation will clearly be a significant logistical consideration.
+Chapter~\ref{ch:numericalsystem}. The numerical complexity is, however, not
+much greater, once the three terms in \eq{eq:efg-terms-res} are calculated. The
+running
+time of the full calculation will clearly be a significant constraint.
 
 With this in mind, the performance of the numerical simulation could be improved by
 analysing the most time consuming processes and investigating what
@@ -585,15 +596,15 @@ WMAP $k$ range but it is not clear whether it sufficiently
 approximates the integral to infinity for the source term.  Currently
 logistical factors, including the running time and memory usage of the code,
 restrict the choice of $N_k$. By optimising the routines
-for reduced memory and increased speed it is hoped to extend the $k$ ranges and
-increase the resolution. 
+for reduced memory and increased speed it should be possible to extend the $k$ ranges
+and increase the resolution. 
 
 
-Beyond these considerations the next clear step is to implement a multi-field
+Beyond these considerations the next step is to implement a multi-field
 version of the system. This would allow the investigation of models that inherently
 produce large second order perturbations. In \Rref{Malik:2006ir} the
 second order Klein-Gordon equation is given for multiple fields and upgrading the
-simulation to use these equations should be a straight-forward if lengthy process.
+simulation to use these equations should be a straight-forward, if lengthy, process.
 Extending the current data-structures and routines to a fixed number of extra fields
 will increase the numerical complexity and the run-time of the code. 
 
@@ -619,17 +630,17 @@ first order using perturbation theory has been shown to be readily achievable, t
 not trivial.
 
 This first demonstration has been limited to considering
-the slow roll source term in \eq{eq:KG2-fourier-sr-num} but without imposing
-slow roll on the evolution terms of the differential equations. Four different
+the slow roll approximation of the source term in \eq{eq:KG2-fourier-sr-num} which
+is quadratic in first order perturbations. Slow roll has not been imposed on the
+background or first order equations. Four different
 potentials
 $V(\vp)=\msqphisq$, $\lambdaphifour$, $\phitwooverthree$ and $\msqphisqwithV$ were
 used to demonstrate the capabilities of the
 system. The singularity at $k=0$ which arises as larger and larger
 scales are considered is avoided by implementing a cutoff at small
 wavenumbers below $\kmin$. This is a pragmatic choice necessary for
-the calculation, but as mentioned before there is some evidence that
-such a cutoff might also explain lack of power at large scales in the
-WMAP data \cite{spergel, Sinha:2005mn, Kim:2009pf}. It is also necessary to
+the calculation.
+It is also necessary to
 pick a maximum $k$ value, and this choice is dictated by computational
 resources and with reference to observationally relevant scales. In
 this demonstration $k$ ranges have been used which are comparable with the
@@ -652,7 +663,7 @@ readily calculated.
 By computing the perturbations to second order we have direct access
 to the non-Gaussianity of $\dvp{}$.  While useful for the toy models
 discussed above (with $\fnl\simeq0$), when used to investigate models
-with predictions of large non-linearity parameter $\fnl$ this technique
+with predictions  large non-linearity parameter $\fnl$, this technique
 could yield greater insight into the formation and development of the
 non-Gaussian contributions by studying the contribution of the different
 terms in the source term \eq{eq:KG2-source-ntime}.
